--- a/Lab1/y2-yearlong-django-review/toplists/movies/templates/movies/movie.html
+++ b/Lab1/y2-yearlong-django-review/toplists/movies/templates/movies/movie.html
@@ -8,7 +8,13 @@
 {% block content %}
 <p> {{ movie.title }} </p>
 
-<form action="movies/addcomment" method="post">
+{% for comment in comments %}
+<p> {{ comment.text }} </p>
+
+{% endfor %}
+
+
+<form action="addcomment" method="post">
 {% csrf_token %}
 Add a comment here: <input type="text" name="comment_text"><br>
 <input type="submit" value="comment">
